Don't destroy multibuffer reader if read operation is pending

In a few cases, we would call "havenoughdata" even when there is a read
operation pending. If we destroy the reader, the read operation never
completes and video playback hangs.

Bug: 836952
Change-Id: Ic66727aa51ddfeb8edcffc72d44457422087a8af
Reviewed-on: https://chromium-review.googlesource.com/1069706
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Commit-Queue: Fredrik Hubinette <hubbe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561162}
Former-commit-id: 86281d8307cde2fde7e303df1460b221701760c2